--- a/views/advance-search.html
+++ b/views/advance-search.html
@@ -18,7 +18,7 @@
                     </div>
 
                     <div class="col-xs-12 text-center" style="margin-top: 20px">
-                        <button type="button" class="btn btn-primary" ng-click="searchRestaurantAdvance()"><i class="fa fa-search" aria-hidden="true"></i> ค้นหาร้าน</button>
+                        <button type="button" class="btn btn-primary" ng-click="searchRestaurantAdvance(); __searcRestaurantsAdvance3();"><i class="fa fa-search" aria-hidden="true"></i> ค้นหาร้าน</button>
                     </div>
                 </div>
             </div>
