--- a/views/add-coupon2.html
+++ b/views/add-coupon2.html
@@ -31,7 +31,7 @@
                                             <p class="area"><i class="fa fa-map-marker" aria-hidden="true"></i> {{ restaurant.area }}</p>
                                         </div>
                                         <div class="col-sm-2 text-right">
-                                            <a ng-href="#/add-coupon" class="btn btn-sm btn-warning" role="button">เปลี่ยน</a>
+                                            <a ng-href="#/add-coupon" class="btn btn-sm btn-warning" role="button" ng-click="__changeRestaurant()">เปลี่ยน</a>
                                         </div>
                                     </div>
                                 </div>
@@ -42,7 +42,7 @@
                             <div class="input-group">
                                 <input type="text" class="form-control" ng-model="couponCode" limit-to="7" placeholder="กรอกรหัสคูปองเอง หรือกดสุ่มก็ได้">
                                 <div class="input-group-btn">
-                                    <button type="button" class="btn btn-primary" ng-click="getCouponCode()">สุ่มรหัสคูปอง</button>
+                                    <button type="button" class="btn btn-primary" ng-click="getCouponCode(); __generateCouponCode();">สุ่มรหัสคูปอง</button>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -50,7 +50,7 @@
                                 <textarea class="form-control" rows="7" ng-model="couponDetail"></textarea>
                             </div>
                             <div class="form-group text-right">
-                                <button type="button" class="btn btn-success" ng-click="sendForm()"><i class="fa fa-check"></i> save</button>
+                                <button type="button" class="btn btn-success" ng-click="sendForm(); __addNewCoupon();"><i class="fa fa-check"></i> save</button>
                             </div>
                         </div>
                     </div>
@@ -66,10 +66,10 @@
     <div class="modal-dialog modal-sm text-center">
         <div class="modal-content">
             <div class="modal-body">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" ng-click="__closeModal()">&times;</button>
                 <img src="imgs/correct.png" alt="">
                 <p>เพิ่มคูปองให้ร้านของคุณเรียบร้อยแล้ว</p>
-                <a id="clickToCoupon" ng-href="#/coupon/{{ idRes }}" role="button" class="btn btn-warning">ดูคูปอง</a>
+                <a id="clickToCoupon" ng-href="#/coupon/{{ idRes }}" role="button" class="btn btn-warning" ng-click="__viewYourCoupon();">ดูคูปอง</a>
             </div>
         </div>
     </div>
