--- a/views/add-restaurant.html
+++ b/views/add-restaurant.html
@@ -106,7 +106,7 @@
                                 <input type="text" id="address" class="form-control" placeholder="ค้นหาที่ตั้ง">
                             </div>
                             <div class="form-group col-sm-4 col-xs-5">
-                                <button id="submit" type="button" class="btn btn-block btn-info"><i class="fa fa-search"></i> ค้นหา</button>
+                                <button id="submit" type="button" class="btn btn-block btn-info" ng-click="__searchLocation()"><i class="fa fa-search"></i> ค้นหา</button>
                             </div>
                             <div class="col-xs-12">
                                 <div class="col-xs-12" id="map" style="height: 400px;"></div>
@@ -136,7 +136,7 @@
     </div>
     <div class="row">
         <div class="form-group col-md-12 text-right">
-            <button type="button" class="btn btn-success btn-lg" ng-click="sendForm()"><i class="fa fa-check"></i> save</button>
+            <button type="button" class="btn btn-success btn-lg" ng-click="sendForm(); __addNewRestaurant()"><i class="fa fa-check"></i> save</button>
         </div>
     </div>
 </div>
@@ -145,11 +145,11 @@
     <div class="modal-dialog modal-sm text-center">
         <div class="modal-content">
             <div class="modal-body">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" ng-click="__closeModal()">&times;</button>
                 <img src="imgs/correct.png" alt="">
                 <p>เพิ่มร้านของคุณเรียบร้อยแล้ว</p>
-                <a id="clickToRes" ng-href="#/restaurant/{{ idRes }}" role="button" class="btn btn-primary" ng-click="hideModal()">ดูร้าน</a>
-                <a id="clickToCoupon" ng-href="#/add-coupon/{{ idRes }}" role="button" class="btn btn-warning" ng-click="hideModal()">เพิ่มคูปอง</a>
+                <a id="clickToRes" ng-href="#/restaurant/{{ idRes }}" role="button" class="btn btn-primary" ng-click="hideModal(); __viewYourRestaurant()">ดูร้าน</a>
+                <a id="clickToCoupon" ng-href="#/add-coupon/{{ idRes }}" role="button" class="btn btn-warning" ng-click="hideModal(); __addYourCoupon()">เพิ่มคูปอง</a>
             </div>
         </div>
     </div>
