--- a/views/index.html
+++ b/views/index.html
@@ -3,15 +3,15 @@
         <div class="col-xs-12">
             <div class="row headermenu text-right hidden-xs">
                 <div class="col-sm-4 text-left">
-                    <a href="#/add-restaurant" class="btn btn-sm btn-success" role="button">
+                    <a href="#/add-restaurant" class="btn btn-sm btn-success" role="button" ng-click="__addNewRestaurant()">
                         <i class="glyphicon glyphicon-plus"></i> เพิ่มร้าน
                     </a>
                 </div>
                 <div class="col-sm-8 text-right">
-                    <a class="btn btn-sm btn-danger" role="button" ng-click="getCurrentLocation()">
+                    <a class="btn btn-sm btn-danger" role="button" ng-click="getCurrentLocation(); __searchNearMe()">
                         <i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; ร้านอาหารใกล้ตัว
                     </a>
-                    <a href="#/coupons" class="btn btn-sm btn-warning" role="button">
+                    <a href="#/coupons" class="btn btn-sm btn-warning" role="button" ng-click="__viewCouponsList()">
                         <i class="fa fa-gift" aria-hidden="true"></i>&nbsp; คูปอง
                     </a>
                 </div>
@@ -20,9 +20,9 @@
             <div class="row headermenu visible-xs">
                 <div class="col-md-12">
                     <div class="btn-group btn-group-justified">
-                        <a href="#/add-restaurant" style="width:25%" class="btn btn-sm btn-success" role="button">เพิ่มร้าน</a>
-                        <a style="width:45%" class="btn btn-sm btn-danger"  role="button" ng-click="getCurrentLocation()">ร้านอาหารใกล้ตัว</a>
-                        <a href="#/coupons" style="width:30%" class="btn btn-sm btn-warning" role="button">คูปอง</a>
+                        <a href="#/add-restaurant" style="width:25%" class="btn btn-sm btn-success" role="button" ng-click="__addNewRestaurant()">เพิ่มร้าน</a>
+                        <a style="width:45%" class="btn btn-sm btn-danger"  role="button" ng-click="getCurrentLocation(); __searchNearMe()">ร้านอาหารใกล้ตัว</a>
+                        <a href="#/coupons" style="width:30%" class="btn btn-sm btn-warning" role="button" ng-click="__viewCouponsList()">คูปอง</a>
                     </div>
                 </div>
             </div>
@@ -55,20 +55,20 @@
                         </div>
                     </div>
                     <div class="col-md-1">
-                        <button type="button" class="btn btn-block btn-lg btn-default" ng-click="searchRestaurant()">ค้นหา</button>
+                        <button type="button" class="btn btn-block btn-lg btn-default" ng-click="searchRestaurant(); __searcRestaurants()">ค้นหา</button>
                     </div>
                     <div class="col-md-2"></div>
                 </form>
                 <div class="row hidden-sm hidden-xs">
                     <div class="col-xs-12 extension text-center">
-                        <a href="#/advance"><i class="fa fa-search-plus" aria-hidden="true"></i> ค้นแบบละเอียด</a>|
-                        <a href="#/maps"><i class="fa fa-map-o" aria-hidden="true"></i> ค้นจากแผนที่</a>
+                        <a href="#/advance" ng-click="__searcRestaurantsAdvance()"><i class="fa fa-search-plus" aria-hidden="true"></i> ค้นแบบละเอียด</a>|
+                        <a href="#/maps" ng-click="__searcRestaurantsByMap()"><i class="fa fa-map-o" aria-hidden="true"></i> ค้นจากแผนที่</a>
                     </div>
                 </div>
                 <div class="row visible-sm visible-xs">
                     <div class="col-xs-12 extension-sm text-center">
-                        <p><a href="#/advance"><i class="fa fa-search-plus" aria-hidden="true"></i> ค้นแบบละเอียด</a></p>
-                        <p><a href="#/maps"><i class="fa fa-map-o" aria-hidden="true"></i> ค้นจากแผนที่</a></p>
+                        <p><a href="#/advance"><i class="fa fa-search-plus" aria-hidden="true" ng-click="__searcRestaurantsAdvance()"></i> ค้นแบบละเอียด</a></p>
+                        <p><a href="#/maps"><i class="fa fa-map-o" aria-hidden="true" ng-click="__searcRestaurantsByMap()"></i> ค้นจากแผนที่</a></p>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 <div class="col-xs-12">
                     <span class="bodytopic__text bodytopic__text--bestscore font-2">ร้านอาหารคะแนนสูงสุด</span>
                     <div class="bodytopic__arrow--bestscore"></div>
-                    <a href="#/search?order=score">
+                    <a href="#/search?order=score" ng-click="__seeMoreBestScoreRestaurants()">
                         <div class="bodytopic__more">
                             ดูทั้งหมด <i class="glyphicon glyphicon-play"></i>
                         </div>
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="row bodycontent">
-                <div ng-repeat="res in bestScoreRestaurants">
+                <div ng-repeat="res in bestScoreRestaurants" ng-click="__viewBestScoreRestaurant()">
                     <section class="col-md-4 col-sm-6 bodycontent__item">
                         <div class="col-xs-12 bodycontent__img boxshadow">
                             <a href="#/restaurant/{{ res.id }}">
@@ -131,14 +131,14 @@
                     <span class="bodytopic__text bodytopic__text--new font-2">ร้านอาหารมาใหม่</span>
                     <div class="bodytopic__arrow--new"></div>
                     <a href="#/search?order=new">
-                        <div class="bodytopic__more">
+                        <div class="bodytopic__more" ng-click="__seeMoreNewRestaurants()">
                             ดูทั้งหมด <i class="glyphicon glyphicon-play"></i>
                         </div>
                     </a>
                 </div>
             </div>
             <div class="row bodycontent">
-                <div ng-repeat="res in newRestaurants">
+                <div ng-repeat="res in newRestaurants" ng-click="__viewNewRestaurant()">
                     <section class="col-md-4 col-sm-6 bodycontent__item">
                         <div class="col-xs-12 bodycontent__img boxshadow">
                             <a href="#/restaurant/{{ res.id }}">
