--- a/views/list-coupons.html
+++ b/views/list-coupons.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 resbody">
         <div class="container">
             <navigator title-level1="คูปอง"></navigator>
-            <a ng-href="#/coupon/{{ coupon.id }}">
+            <a ng-href="#/coupon/{{ coupon.id }}" ng-click="__viewCoupon()">
                 <div class="row listcoupon boxshadow" ng-repeat="coupon in coupons | limitTo:couponPerPage">
                     <div class="col-xs-12" style="padding-left: 0px;">
                         <div class="col-sm-3 hidden-xs">
@@ -18,14 +18,14 @@
                                 <p>{{ coupon.couponContent }}</p>
                             </div>
                             <div class="col-xs-12">
-                                <a ng-href="#/coupon/{{ coupon.id }}" class="btn btn-xs btn-primary" role="button">ดูรายละเอียด</a>
-                                <a ng-href="#/restaurant/{{ coupon.id }}" target="_blank" class="btn btn-xs btn-warning" role="button">ดูข้อมูลร้าน</a>
+                                <a ng-href="#/coupon/{{ coupon.id }}" class="btn btn-xs btn-primary" role="button" ng-click="__viewCoupon()">ดูรายละเอียด</a>
+                                <a ng-href="#/restaurant/{{ coupon.id }}" target="_blank" class="btn btn-xs btn-warning" role="button" ng-click="__viewRestaurant()">ดูข้อมูลร้าน</a>
                             </div>
                         </div>
                         <div class="col-sm-2 text-right">
                             <div class="button-group">
                                 <div class="row">
-                                    <button type="button" class="btn btn-md btn-danger" data-toggle="modal" data-target="#getCoupon" ng-click="getCoupon(coupon.name, coupon.couponCode)"><i class="fa fa-gift" aria-hidden="true"></i> รับรหัสคูปอง</button>
+                                    <button type="button" class="btn btn-md btn-danger" data-toggle="modal" data-target="#getCoupon" ng-click="getCoupon(coupon.name, coupon.couponCode); __getCoupon();"><i class="fa fa-gift" aria-hidden="true"></i> รับรหัสคูปอง</button>
                                 </div>
                             </div>
                         </div>
@@ -36,7 +36,7 @@
     </div>
 
     <div class="col-xs-12 text-center" ng-if="coupons.length!==0">
-        <span class="seemorelist" ng-show="couponPerPage < coupons.length" ng-click="loadMore()">
+        <span class="seemorelist" ng-show="couponPerPage < coupons.length" ng-click="loadMore(); __loadMoreCoupons();">
             <span ng-show="!loadingMore"><i class="fa fa-chevron-down" aria-hidden="true"></i> ดูเพิ่มเติม ({{ coupons.length - couponPerPage }})</span>
             <span ng-show="loadingMore"><img src="imgs/loadmore.svg">&nbsp; loading</span>
         </span>
