--- a/views/search-restaurants.html
+++ b/views/search-restaurants.html
@@ -6,7 +6,7 @@
             <div ng-repeat="res in foundRestaurants | limitTo:resPerPage">
                 <section class="col-md-4 col-sm-6 bodycontent__item">
                     <div class="col-xs-12 bodycontent__img boxshadow">
-                        <a href="#/restaurant/{{ res.id }}">
+                        <a href="#/restaurant/{{ res.id }}" ng-click="__viewRestaurant()">
                             <span class="location">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i> {{ res.area }}
                             </span>
@@ -22,7 +22,7 @@
                         <div class="col-xs-12">
                             <div class="col-xs-12 wrap boxshadow">
                                 <div class="name">
-                                    <a href="#/restaurant/{{ res.id }}">{{ res.name }}</a>
+                                    <a href="#/restaurant/{{ res.id }}" ng-click="__viewRestaurant()">{{ res.name }}</a>
                                 </div>
                                 <div class="">{{ res.type }}</div>
                                 <div>
@@ -43,7 +43,7 @@
 
             <div class="row text-center" ng-if="foundRestaurants.length!==0">
                 <div class="col-xs-12">
-                    <span class="seemorelist" ng-show="resPerPage < foundRestaurants.length" ng-click="loadMore()">
+                    <span class="seemorelist" ng-show="resPerPage < foundRestaurants.length" ng-click="loadMore(); __loadMoreRestaurants();">
                         <span ng-show="!loadingMore"><i class="fa fa-chevron-down" aria-hidden="true"></i> ดูเพิ่มเติม ({{ foundRestaurants.length - resPerPage }})</span>
                         <span ng-show="loadingMore"><img src="imgs/loadmore.svg">&nbsp; loading</span>
                     </span>
@@ -56,7 +56,7 @@
                     <p><img src="imgs/restaurant-not-found.png"></p>
                     <h1 class="resnotfound__row font-2">ไม่พบร้านอาหารที่ต้องการ</h1>
                     <p class="resnotfound__row">
-                        <a href="#/add-restaurant" type="button" class="btn btn-success">
+                        <a href="#/add-restaurant" type="button" class="btn btn-success" ng-click="__addNewRestaurant()">
                             <i class="fa fa-plus" aria-hidden="true"></i> เพิ่มร้านของคุณ
                         </a>
                     </p>
