--- a/views/show-restaurant.html
+++ b/views/show-restaurant.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="col-xs-12 boxshadow" ng-init="lat=13.76493;">
-                        <a target="_blank" ng-href="http://maps.google.com/maps?&z=18&q={{ restaurant.map.lat }}+{{ restaurant.map.lng }}&ll={{ restaurant.map.lat }}+{{ restaurant.map.lng }}">
+                        <a target="_blank" ng-href="http://maps.google.com/maps?&z=18&q={{ restaurant.map.lat }}+{{ restaurant.map.lng }}&ll={{ restaurant.map.lat }}+{{ restaurant.map.lng }}" ng-click="__seeFullMap()">
                             <div class="row wrapimg img-effect-3" crop-img wrap-height="1.04" ng-style="wrapSize">
                                 <img class="img" ng-style="imgSize" ng-src="https://maps.googleapis.com/maps/api/staticmap?center={{ restaurant.map.lat }},{{ restaurant.map.lng }}&zoom=18&size=600x500&markers=color:red|icon:http://icons.iconarchive.com/icons/paomedia/small-n-flat/64/map-marker-icon.png|{{ restaurant.map.lat }},{{ restaurant.map.lng }}&key=AIzaSyCL_WJGAK__EjZPogQ6W5fFPhJfD-bI0PE"
                                 />
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <a ng-href="#/coupon/{{ idRes }}" target="_blank">
+                            <a ng-href="#/coupon/{{ idRes }}" target="_blank" ng-click="__checkCoupon()">
                                 <img src="imgs/coupon.png" class="check-coupon">
                             </a>
                         </div>
@@ -156,7 +156,7 @@
                                 </div>
 
                                 <div class="col-xs-12 text-center button">
-                                    <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#addScore" ng-click="resetScore();">ให้คะแนนร้านนี้</button>
+                                    <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#addScore" ng-click="resetScore(); __giveScore1()">ให้คะแนนร้านนี้</button>
                                 </div>
 
                             </div>
@@ -217,7 +217,7 @@
             </div>
             <div class="modal-footer" style="border: 0;">
                 <div class="row text-center">
-                    <button type="button" class="btn btn-success" ng-click="addScore(); refreshScore();"><i class="fa fa-check" aria-hidden="true"></i> บันทึกคะแนน</button>
+                    <button type="button" class="btn btn-success" ng-click="addScore(); refreshScore(); __giveScore2();"><i class="fa fa-check" aria-hidden="true"></i> บันทึกคะแนน</button>
                 </div>
             </div>
         </div>
