fixed Json issue

--- a/views/show-restaurant.html
+++ b/views/show-restaurant.html
@@ -165,7 +165,7 @@
 
                     <div class="panel panel-default" style="border-radius: 0px;">
                         <div class="panel-body">
-                            <div id="fb-comment-box" dyn-fb-comment-box page-href="http://www.indytheme.com/AroiDBkk/{{ idRes }}" numposts="2" colorscheme="light">
+                            <div id="fb-comment-box" dyn-fb-comment-box page-href="http://www.indytheme.com/aroidbkk/#/restaurant/{{ idRes }}" numposts="2" colorscheme="light">
                             </div>
                         </div>
                     </div>
